Added parameters for moving robot cases
Calculating the probability of the robot getting stuck